<resources>
    <string name="app_name">mRides</string>
    <string name="title_activity_maps">Unicorn Map</string>
    <string name="destination_map">Pavillion Henry F.Hall Bldg</string>
    <string name="destination_address">1455 Boulevard de Maisonneuve O</string>
    <string name="user1">Will be late, 5 min.</string>
    <string name="username1">John Potato</string>
    <string name="username2">Jane Potato</string>
    <string name="user2">At the pickup location.</string>
    <string name="user_distance1">0.5 mi</string>
    <string name="user_distance2">0.1 mi</string>
    <string name="menu_left">TRIPS</string>
    <string name="menu_middle">NAVIGATION</string>
    <string name="menu_right">PROFILE</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>