<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="3dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_0"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_margin="3dp"
        card_view:cardCornerRadius="4dp">

        <fragment
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:context="com.potato.unicornpotato.MapsActivity" />

        <TextView
            android:layout_marginLeft="60dp"
            android:text="@string/destination_map"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView0" />

        <TextView
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/destination_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nav"
            android:padding="5dp"
            android:id="@+id/imageView" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/card_view_0"
        android:layout_margin="3dp"
        card_view:cardCornerRadius="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nav"
            android:padding="5dp"
            android:id="@+id/imageView2" />

        <TextView
            android:layout_marginLeft="60dp"
            android:text="@string/username1"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/textView2" />

        <TextView
            android:layout_marginLeft="60dp"
            android:text="@string/user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username1"
            android:paddingTop="25dp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_marginLeft="300dp"
            android:text="@string/user_distance1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:id="@+id/textView4" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        card_view:cardCornerRadius="4dp"
        android:layout_below="@+id/card_view_1"
        android:layout_margin="3dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nav"
            android:padding="5dp"
            android:id="@+id/imageView3" />

        <TextView
            android:layout_marginLeft="60dp"
            android:text="@string/username2"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/textView5" />

        <TextView
            android:layout_marginLeft="60dp"
            android:text="@string/user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username2"
            android:paddingTop="25dp"
            android:id="@+id/textView6" />

        <TextView
            android:layout_marginLeft="300dp"
            android:text="@string/user_distance2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:id="@+id/textView7" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/card_view_2"
        card_view:cardBackgroundColor="@color/wallet_holo_blue_light"
        android:layout_margin="3dp">

        <TextView
            android:text="@string/menu_left"
            android:layout_gravity="left"
            android:layout_margin="14dp"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:id="@+id/textView8"
            android:focusable="true"
            android:clickable="true"
            android:selectAllOnFocus="true"/>

        <TextView
            android:text="@string/menu_middle"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/textView9"
            android:focusable="true"
            android:clickable="true"
            android:selectAllOnFocus="true"/>

        <TextView
            android:text="@string/menu_right"
            android:layout_gravity="right"
            android:layout_margin="14dp"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:id="@+id/textView10"
            android:focusable="true"
            android:clickable="true"
            android:selectAllOnFocus="true"/>
    </android.support.v7.widget.CardView>

</RelativeLayout>
